<resources>
    <string name="app_name">Edukatif.in</string>
    <string name="_">-</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name :</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address :</string>
    <string name="enter_email">Enter Email</string>
    <string name="voucher">Voucher</string>
    <string name="book_store">Book Store</string>
    <string name="e_book">E-Book</string>
    <string name="learning">Learning</string>
    <string name="isikan_data_diri_anda_di_bawah_ini">Isikan data diri Anda di bawah ini :</string>
    <string name="saran_untuk_edukatif_in">Saran untuk Edukatif.in</string>
    <string name="apakah_anda_puas_dengan_layanan_kami">Apakah Anda puas dengan layanan kami?</string>
    <string name="terima_kasih_telah_melakukan_pengiriman_data_silahkan_klik_tombol_simpan_di_bawah_ini">Terima kasih telah melakukan pengiriman data. Silahkan klik tombol \'Simpan\' di bawah ini.</string>
    <string name="terima_kasih_atas_kritik_dan_sarannya_untuk_mendapatkan_poin_transaksi_klaim_kode_berikut">Terima kasih atas kritik dan sarannya, untuk mendapatkan poin transaksi klaim kode berikut.</string>
    <string name="xxx12913xx">XXX12913XX</string>
    <string name="simpan">Simpan</string>
    <string name="tidak">Tidak</string>
    <string name="puas">Puas</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="tempat_tgl_lahir">Tempat, tgl lahir</string>
    <string name="profesi">Profesi</string>
    <string name="_titik2">:</string>
    <string name="kelas">Kelas</string>
    <string name="guru">Guru</string>
    <string name="hari">Hari</string>
    <string name="jam">Jam</string>
    <string name="congratulations">Congratulations!</string>
    <string name="selamat_fransisca_n_anda_telah_menyelesaikan_kuis_n_nilai_anda">Selamat, Fransisca!\n Anda telah menyelesaikan kuis.\n Nilai Anda :</string>
    <string name="_85">85</string>
    <string name="oke">Oke</string>
    <string name="salin_kode">Salin Kode</string>
    <string name="kelas_telaah">: Kelas Telaah</string>
    <string name="ibu_anin_s_pd">: Ibu Anin, S.Pd.</string>
    <string name="jumat_17_april_2020">: Jumat, 17 April 2020</string>
    <string name="_09_00_selesai">: 09.00 - selesai</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal_dibuat">Tanggal dibuat</string>
    <string name="batas_waktu">Batas waktu</string>
    <string name="lets">Let\'s say something here...</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="hari_dan_tanggal">Hari dan tanggal</string>
    <string name="deskripsi_tugas">Deskripsi Tugas</string>
</resources>
