<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/birumuda"
    tools:context=".BookstroreActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/isikan_data_diri_anda_di_bawah_ini"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/nama"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/alamat"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/tempat_tgl_lahir"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/profesi"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/_titik2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/_titik2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/_titik2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:text="@string/_titik2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_textbox"
                        android:textSize="18sp"
                        android:hint="@string/nama"
                        android:padding="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_textbox"
                        android:textSize="18sp"
                        android:hint="@string/alamat"
                        android:padding="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_textbox"
                        android:textSize="18sp"
                        android:hint="@string/tempat_tgl_lahir"
                        android:padding="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_textbox"
                        android:textSize="18sp"
                        android:hint="@string/profesi"
                        android:padding="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/saran_untuk_edukatif_in"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="Kritik dan Saran"
                android:padding="20dp"
                android:gravity="start"
                android:textSize="18sp"
                android:background="@drawable/bg_textbox"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/apakah_anda_puas_dengan_layanan_kami"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_btnhijau"
                    android:layout_marginTop="20dp"
                    android:text="@string/puas"
                    android:textColor="#fff"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_btnmerah"
                    android:layout_marginTop="20dp"
                    android:text="@string/tidak"
                    android:textColor="#fff"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/terima_kasih_telah_melakukan_pengiriman_data_silahkan_klik_tombol_simpan_di_bawah_ini"/>
            <Button
                android:id="@+id/btn_simpan_saran"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_btnlogin"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/simpan"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:text="@string/terima_kasih_atas_kritik_dan_sarannya_untuk_mendapatkan_poin_transaksi_klaim_kode_berikut"/>
            <Button
                android:id="@+id/id_klaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_textbox"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/xxx12913xx"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>